@@ -1,62 +1,100 @@
-package pt.ipp.isep.dei.sismd.benchmarking;
+package pt.ipp.isep.dei.sismd.filter.grayscale;
 
 import org.openjdk.jmh.annotations.*;
+import org.openjdk.jmh.results.format.ResultFormatType;
+import org.openjdk.jmh.runner.Runner;
+import org.openjdk.jmh.runner.RunnerException;
+import org.openjdk.jmh.runner.options.Options;
+import org.openjdk.jmh.runner.options.OptionsBuilder;
+import pt.ipp.isep.dei.sismd.Utils;
 import pt.ipp.isep.dei.sismd.domain.Image;
 
+import java.io.File;
 import java.util.concurrent.TimeUnit;
 
 @State(Scope.Benchmark)
-public class Benchmarks {
+@BenchmarkMode(Mode.AverageTime)
+@OutputTimeUnit(TimeUnit.MILLISECONDS)
+public class GrayscaleBenchmarks {
 
-    @Param({"10"})
-    private int iterations;
-
-    private final String filepath = "src/main/resources/imgs/4k/city-night-4k.png";
+    @Param("turtle.jpg")
+    private String pathToFile;
 
     private Image image;
 
     @Setup
     public void setup() {
-//        TODO: Load image on setup
+        image = Utils.loadImage(new File(pathToFile));
     }
 
     @Benchmark
-    @Warmup(iterations = 0)
-    @OutputTimeUnit(TimeUnit.MICROSECONDS)
-    @BenchmarkMode(Mode.AverageTime)
-    public void benchmark_sequential() {
-//        TODO: Implement benchmark
+    public Image sequential() {
+        return new SequentialGrayscaleFilter().apply(image);
     }
 
     @Benchmark
-    @OutputTimeUnit(TimeUnit.MICROSECONDS)
-    @Warmup(iterations = 0)
-    @BenchmarkMode(Mode.AverageTime)
-    public void benchmark_multithreaded() {
-//        TODO: Implement benchmark
+    public Image multithreaded() {
+        return new MultithreadedGrayscaleFilter().apply(image);
     }
 
     @Benchmark
-    @OutputTimeUnit(TimeUnit.MICROSECONDS)
-    @Warmup(iterations = 0)
-    @BenchmarkMode(Mode.AverageTime)
-    public void benchmark_executor() {
-//        TODO: Implement benchmark
+    public Image executor() {
+        return new ExecutorGrayscaleFilter().apply(image);
     }
 
     @Benchmark
-    @OutputTimeUnit(TimeUnit.MICROSECONDS)
-    @Warmup(iterations = 0)
-    @BenchmarkMode(Mode.AverageTime)
-    public void benchmark_fork_join_pool() {
-//        TODO: Implement benchmark
+    public Image forkJoin() {
+        return new ForkJoinGrayscaleFilter().apply(image);
     }
 
     @Benchmark
-    @OutputTimeUnit(TimeUnit.MICROSECONDS)
-    @Warmup(iterations = 0)
-    @BenchmarkMode(Mode.AverageTime)
-    public void benchmark_completable_futures() {
-//        TODO: Implement benchmark
+    public Image completableFuture() {
+        return new CompletableFutureGrayscaleFilter().apply(image);
+    }
+
+    public static void main(String[] args) throws RunnerException {
+        Options smallImageG1GC = new OptionsBuilder()
+                .include(GrayscaleBenchmarks.class.getSimpleName())
+                .param("pathToFile", "turtle.jpg")
+                .forks(3)
+                .jvmArgs("-XX:+UseG1GC")
+                .resultFormat(ResultFormatType.CSV)
+                .result("benchmark_results/grayscale/small_image_g1gc_" + System.currentTimeMillis() + ".csv")
+                .build();
+
+        new Runner(smallImageG1GC).run();
+
+        Options bigImageG1GC = new OptionsBuilder()
+                .include(GrayscaleBenchmarks.class.getSimpleName())
+                .param("pathToFile", "src/main/resources/imgs/4k/city-night-4k.png")
+                .forks(3)
+                .jvmArgs("-XX:+UseG1GC")
+                .resultFormat(ResultFormatType.CSV)
+                .result("benchmark_results/grayscale/big_image_g1gc_" + System.currentTimeMillis() + ".csv")
+                .build();
+
+        new Runner(bigImageG1GC).run();
+
+        Options smallImageZGC = new OptionsBuilder()
+                .include(GrayscaleBenchmarks.class.getSimpleName())
+                .param("pathToFile", "turtle.jpg")
+                .forks(3)
+                .jvmArgs("-XX:+UseZGC")
+                .resultFormat(ResultFormatType.CSV)
+                .result("benchmark_results/grayscale/small_image_zgc_" + System.currentTimeMillis() + ".csv")
+                .build();
+
+        new Runner(smallImageZGC).run();
+
+        Options bigImageZGC = new OptionsBuilder()
+                .include(GrayscaleBenchmarks.class.getSimpleName())
+                .param("pathToFile", "src/main/resources/imgs/4k/city-night-4k.png")
+                .forks(3)
+                .jvmArgs("-XX:+UseZGC")
+                .resultFormat(ResultFormatType.CSV)
+                .result("benchmark_results/grayscale/big_image_zgc_" + System.currentTimeMillis() + ".csv")
+                .build();
+
+        new Runner(bigImageZGC).run();
     }
 }
